bases/datawarehouse/prefect/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-agents
  namespace: datawarehouse
  labels:
    app: prefect
    component: agents
spec:
  selector:
    matchLabels:
      app: prefect
      component: agents
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: bink-agent
      labels:
        app: prefect
        component: agents
    spec:
      containers:
        - name: bink-agent
          image: binkcore.azurecr.io/data-warehouse:latest
          args: ["prefect", "agent", "start", "-q", "prod-agent"]
          resources:
            requests:
              cpu: 250m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /root/.prefect
              name: config
        - name: default-agent
          image: binkcore.azurecr.io/data-warehouse:latest
          args: ["prefect", "agent", "start", "-q", "default"]
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          volumeMounts:
            - mountPath: /root/.prefect
              name: config
      serviceAccountName: prefect
      priorityClassName: bink-high-tasks
      volumes:
        - name: config
          emptyDir: {}
