bases/datawarehouse/prefect/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: prefect-server
  namespace: datawarehouse
  labels:
    app: prefect
    component: server
spec:
  ports:
    - port: 4200
      protocol: TCP
  selector:
    app: prefect
    component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-server
  namespace: datawarehouse
  labels:
    app: prefect
    component: server
spec:
  selector:
    matchLabels:
      app: prefect
      component: server
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: app
      labels:
        app: prefect
        component: server
    spec:
      containers:
        - name: app
          image: binkcore.azurecr.io/data-warehouse:latest
          command:
            [
              "prefect",
              "server",
              "start",
              "--host",
              "0.0.0.0",
              "--log-level",
              "WARNING",
            ]
          resources:
            requests:
              cpu: 10m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 1024Mi
          ports:
            - containerPort: 4200
          volumeMounts:
            - mountPath: /root/.prefect
              name: config
      serviceAccountName: prefect
      priorityClassName: bink-high-tasks
      volumes:
        - name: config
          emptyDir: {}
