bases/datawarehouse/prefect/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect.${cluster_name}.${cluster_location}.bink.sh
  namespace: datawarehouse
spec:
  ingressClassName: traefik
  rules:
    - host: prefect.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
  tls:
    - hosts:
        - prefect.${cluster_name}.${cluster_location}.bink.sh
